# 8MLET-F1

./: .gitignore  Dockerfile.api  Dockerfile.dashboard  LICENSE  README.md  cloudbuild.api.yaml  cloudbuild.dashboard.yaml  deploy.sh  pyproject.toml
data/: books.db
docs/: api_guide.md  architecture.md
scripts/: __init__.py  create_admin.py  dashboard.py  run_scraper.py
src/: __init__.py  main.py
src/api/: __init__.py  deps.py
src/api/v1/: __init__.py  router.py
src/api/v1/endpoints/: __init__.py  auth.py  books.py  categories.py  health.py  metrics.py  ml.py  scraping.py  stats.py
src/core/: __init__.py  config.py  database.py  exceptions.py  logging.py  middleware.py
src/models/: __init__.py  book.py  user.py
src/repository/: __init__.py  base.py  sqlalchemy_repository.py
src/schemas/: __init__.py  auth.py  responses.py
src/scraper/: __init__.py  exporter.py  parser.py  scraper.py
src/services/: __init__.py  auth_service.py  book_service.py  ml_service.py  stats_service.py
tests/: test_api.py
